update flink and opensearch port
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/cp3-networkpolicy/ingress/flink/bedrock-access-to-ibm-flink-operand.yaml
+++ b/cp3-networkpolicy/ingress/flink/bedrock-access-to-ibm-flink-operand.yaml
@@ -12,7 +12,9 @@ spec:
       - protocol: TCP
         port: 443
       - protocol: TCP
-        port: 9443
+        port: 8081
+      - protocol: TCP
+        port: 9081
       from:
         - podSelector: {}
   policyTypes:
