update opensearch networkpolicy
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/cp3-networkpolicy/ingress/opensearch/bedrock-access-to-ibm-opensearch-operator.yaml
+++ b/cp3-networkpolicy/ingress/opensearch/bedrock-access-to-ibm-opensearch-operator.yaml
@@ -13,6 +13,8 @@ spec:
         port: 443
       - protocol: TCP
         port: 2112
+      - protocol: TCP
+        port: 9200
       from:
         - podSelector: {}
   policyTypes:
