--- a/cp3-networkpolicy/ingress/opensearch/bedrock-access-to-ibm-opensearch-operand.yaml
+++ b/cp3-networkpolicy/ingress/opensearch/bedrock-access-to-ibm-opensearch-operand.yaml
@@ -13,6 +13,10 @@ spec:
         port: 443
       - protocol: TCP
         port: 19300
+      - protocol: TCP
+        port: 9300
+      - protocol: TCP
+        port: 9200
       from:
         - podSelector: {}
   policyTypes:
