--- a/cp3-networkpolicy/ingress/opensearch/bedrock-access-to-ibm-opensearch-operand.yaml
+++ b/cp3-networkpolicy/ingress/opensearch/bedrock-access-to-ibm-opensearch-operand.yaml
@@ -12,7 +12,11 @@ spec:
       - protocol: TCP
         port: 443
       - protocol: TCP
-        port: 9443
+        port: 19300
+      - protocol: TCP
+        port: 9300
+      - protocol: TCP
+        port: 9200
       from:
         - podSelector: {}
   policyTypes:
