--- a/cp3-networkpolicy/ingress/opensearch/bedrock-access-to-ibm-opensearch-operator.yaml
+++ b/cp3-networkpolicy/ingress/opensearch/bedrock-access-to-ibm-opensearch-operator.yaml
@@ -12,7 +12,9 @@ spec:
       - protocol: TCP
         port: 443
       - protocol: TCP
-        port: 9443
+        port: 2112
+      - protocol: TCP
+        port: 9200
       from:
         - podSelector: {}
   policyTypes:
