--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -66,6 +66,32 @@ rules:
   - config.openshift.io
   resources:
   - infrastructures
+# Delete ServiceAccount, RoleBinding, Role
+- apiGroups:
+  - ""
+  resources:
+  - serviceaccounts
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - rolebindings
+  - roles
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
