--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -23,7 +23,7 @@ metadata:
     capabilities: Seamless Upgrades
     cloudPakThemesVersion: styles4100.css
     containerImage: icr.io/cpopen/common-service-operator:latest
-    createdAt: "2024-10-31T04:39:08Z"
+    createdAt: "2024-10-31T05:22:07Z"
     description: The IBM Cloud Pak foundational services operator is used to deploy IBM foundational services.
     nss.operator.ibm.com/managed-operators: ibm-common-service-operator
     nss.operator.ibm.com/managed-webhooks: ""
@@ -466,6 +466,7 @@ spec:
                 - statefulsets
                 - daemonsets
               verbs:
+                - delete
                 - get
                 - list
                 - patch
@@ -600,6 +601,18 @@ spec:
                 - get
                 - delete
                 - list
+            - apiGroups:
+                - ibmcpcs.ibm.com
+              resources:
+                - secretshares
+              verbs:
+                - create
+                - delete
+                - get
+                - list
+                - patch
+                - update
+                - watch
           serviceAccountName: ibm-common-service-operator
     strategy: deployment
   installModes:
